; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_omx.c_append_buffer.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_omx.c_append_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32**, i32*)* @append_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @append_buffer(i32* %0, i32* %1, i32* %2, i32** %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32**, align 8
  %10 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32** %3, i32*** %9, align 8
  store i32* %4, i32** %10, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @pthread_mutex_lock(i32* %11)
  %13 = load i32*, i32** %10, align 8
  %14 = load i32**, i32*** %9, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = load i32, i32* %15, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %15, align 4
  %18 = sext i32 %16 to i64
  %19 = getelementptr inbounds i32*, i32** %14, i64 %18
  store i32* %13, i32** %19, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = call i32 @pthread_cond_broadcast(i32* %20)
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @pthread_mutex_unlock(i32* %22)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_cond_broadcast(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
